--- a/app/src/main/res/layout/contact_dialog.xml
+++ b/app/src/main/res/layout/contact_dialog.xml
@@ -2,7 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/custom_border_top_shape"
     android:layout_height="wrap_content">
+    <ImageView
+        android:scaleType="centerCrop"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_logo_green"
+        />
     <TextView
         android:id="@+id/tvTitle"
         android:textColor="@color/colorPrimary"
@@ -18,7 +26,7 @@
         android:gravity="center"
         android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="50dp">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgHotline"
             android:background="@drawable/custom_avt_shape_black"
@@ -30,9 +38,10 @@
             android:layout_marginEnd="10dp"
             />
         <TextView
+            android:gravity="center_vertical"
             android:id="@+id/tvHotline"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textColor="@color/black"
             android:textSize="24dp"
             android:text="Call Hotline : (090) 991 6020"
@@ -46,7 +55,7 @@
         android:gravity="center"
         android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="50dp">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgEmail"
             android:background="@drawable/custom_avt_shape_black"
@@ -58,9 +67,10 @@
             android:layout_marginEnd="10dp"
             />
         <TextView
+            android:gravity="center_vertical"
             android:id="@+id/tvEmailUS"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textColor="@color/black"
             android:textSize="24dp"
             android:text="Email Us"
