--- a/app/src/main/res/layout/fragment_buy.xml
+++ b/app/src/main/res/layout/fragment_buy.xml
@@ -29,60 +29,72 @@
             />
     <RelativeLayout
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="35dp"
+        android:layout_marginHorizontal="25dp"
         android:layout_width="match_parent"
         android:layout_height="24dp">
+
         <ImageView
             android:id="@+id/imgFilter"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_filter"
             android:layout_width="24dp"
-            android:layout_height="24dp"/>
-        <LinearLayout
-            android:gravity="center"
-            android:weightSum="3"
-            android:layout_toLeftOf="@id/imgSort"
-            android:layout_toRightOf="@id/imgFilter"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimary"
-                android:lineHeight="11dp"
-                android:textSize="14dp"
-                android:text="Price"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-            <TextView
+            android:layout_height="24dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_filter" />
 
-                android:textColor="@color/colorPrimary"
-                android:lineHeight="11dp"
-                android:textAlignment="center"
-                android:textSize="14dp"
-                android:text="Price"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/imgTypeDisplay"
+            android:layout_toRightOf="@id/imgFilter"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
             <TextView
-                android:textColor="@color/colorPrimary"
-                android:lineHeight="11dp"
-                android:textAlignment="center"
-                android:textSize="14dp"
-                android:text="Price"
-                android:layout_weight="1"
+                android:id="@+id/tvPriceFilter"
+                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:lineHeight="11dp"
+                android:text="Price"
+                android:lines="1"
+                android:gravity="center"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/tvTypeFilter"
+                android:gravity="center"
+                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:lineHeight="11dp"
+                android:text="Brand"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14dp" />
+
+            <TextView
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
+                android:id="@+id/tvSort"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:lineHeight="11dp"
+                android:text="List"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14dp" />
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/imgSort"
+            android:id="@+id/imgTypeDisplay"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_alignParentRight="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_sort"
-            android:layout_width="24dp"
-            android:layout_height="24dp"/>
+            android:src="@drawable/ic_baseline_list_24" />
     </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvProducts"
