--- a/app/src/main/res/layout/item_cart_layout.xml
+++ b/app/src/main/res/layout/item_cart_layout.xml
@@ -2,81 +2,71 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_margin="10dp"
-    android:orientation="horizontal">
-
-    <androidx.cardview.widget.CardView
-        android:layout_marginEnd="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="16dp">
-
-        <ImageView
-            android:id="@+id/imgCartItem"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:scaleType="centerCrop"
-             />
-    </androidx.cardview.widget.CardView>
-    <RelativeLayout
-        android:layout_margin="5dp"
+    android:layout_marginVertical="5dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/tvCartItemName"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:text="Guitar Acoutics"
-            android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.cardview.widget.CardView
+            android:layout_margin="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            />
+            app:cardCornerRadius="16dp">
 
-        <TextView
-            android:id="@+id/tvCartItemPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tvCartItemName"
-            android:text="12.000.000 d"
-            android:textColor="#66000000"
-            android:textSize="16dp" />
+            <ImageView
+                android:id="@+id/imgCartItem"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                />
+        </androidx.cardview.widget.CardView>
         <RelativeLayout
-            android:background="@drawable/img_background_cart_quantity"
-            android:layout_alignParentBottom="true"
-            android:layout_width="100dp"
-            android:layout_height="32dp"
-            >
+            android:gravity="center"
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <ImageButton
-                android:id="@+id/btnMinus"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="5dp"
-                android:background="@android:color/transparent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_minus"
-                />
             <TextView
-                android:id="@+id/tvQuantity"
-                android:textSize="14dp"
-                android:text="1"
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <ImageButton
-                android:id="@+id/btnPlus"
-                android:layout_alignParentRight="true"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="5dp"
-                android:background="@android:color/transparent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_plus"
+                android:id="@+id/tvCartItemName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Guitar Acoutics"
+                android:lines="1"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
-                />
+            <TextView
+                android:id="@+id/tvCartItemPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvCartItemName"
+                android:text="12.000.000 "
+                android:textColor="@color/textColor"
+                android:textSize="16dp" />
+            <TextView
+                android:layout_toEndOf="@id/tvCartItemPrice"
+                android:id="@+id/tvCartItemQuantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvCartItemName"
+                android:text="x 2"
+                android:textColor="@color/colorPrimary"
+                android:textSize="16dp" />
+            <TextView
+                android:id="@+id/tvCartItemTotalPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvCartItemPrice"
+                android:text="$ 24.000.000"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="16dp" />
         </RelativeLayout>
-    </RelativeLayout>
+    </LinearLayout>
+
+
 </LinearLayout>
