--- a/app/src/main/res/layout/item_product_layout.xml
+++ b/app/src/main/res/layout/item_product_layout.xml
@@ -35,6 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/tvPriceDiscount"
+
                 android:layout_gravity="center"
                 android:textStyle="bold"
                 android:lineHeight="24dp"
