--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -488,6 +488,7 @@
                     android:textStyle="bold" />
             </LinearLayout>
             <Button
+                android:layout_marginBottom="30dp"
                 android:layout_marginTop="10dp"
                 android:textSize="12dp"
                 android:textColor="@color/white"
