--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,123 +78,125 @@
 
             />
     </RelativeLayout>
+
     <RelativeLayout
-        android:layout_centerHorizontal="true"
         android:id="@+id/cvCard"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/rltUserInfo"
         android:layout_width="250dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rltUserInfo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp">
+
         <androidx.cardview.widget.CardView
-            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="166dp"
+            android:layout_centerInParent="true"
             android:layout_marginTop="20dp"
             android:background="#D9FFFFFF"
             app:cardCornerRadius="10dp">
 
             <FrameLayout
-                android:layout_gravity="center"
                 android:id="@+id/vpYPVHome"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-<!--            <RelativeLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent">-->
+                android:layout_height="match_parent"
+                android:layout_gravity="center" />
+            <!--            <RelativeLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent">-->
 
-<!--                <ImageView-->
-<!--                    android:layout_width="112dp"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_alignParentRight="true"-->
-<!--                    android:layout_alignParentBottom="true"-->
-<!--                    android:alpha="0.6"-->
-<!--                    android:paddingStart="80dp"-->
-<!--                    android:scaleType="centerCrop"-->
-<!--                    android:src="@drawable/ic_logo_green"-->
+            <!--                <ImageView-->
+            <!--                    android:layout_width="112dp"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:layout_alignParentRight="true"-->
+            <!--                    android:layout_alignParentBottom="true"-->
+            <!--                    android:alpha="0.6"-->
+            <!--                    android:paddingStart="80dp"-->
+            <!--                    android:scaleType="centerCrop"-->
+            <!--                    android:src="@drawable/ic_logo_green"-->
 
-<!--                    />-->
+            <!--                    />-->
 
-<!--                <TextView-->
-<!--                    android:id="@+id/tvGMR"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="20dp"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:gravity="center_horizontal"-->
-<!--                    android:lineHeight="20dp"-->
-<!--                    android:text="GZ MUSICAL REWARD"-->
-<!--                    android:textColor="#00623B"-->
-<!--                    android:textSize="11dp"-->
-<!--                    android:textStyle="bold" />-->
+            <!--                <TextView-->
+            <!--                    android:id="@+id/tvGMR"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="20dp"-->
+            <!--                    android:layout_marginTop="10dp"-->
+            <!--                    android:gravity="center_horizontal"-->
+            <!--                    android:lineHeight="20dp"-->
+            <!--                    android:text="GZ MUSICAL REWARD"-->
+            <!--                    android:textColor="#00623B"-->
+            <!--                    android:textSize="11dp"-->
+            <!--                    android:textStyle="bold" />-->
 
-<!--                <TextView-->
-<!--                    android:id="@+id/tvLv"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="20dp"-->
-<!--                    android:layout_below="@id/tvGMR"-->
-<!--                    android:gravity="center_horizontal"-->
-<!--                    android:letterSpacing="0.02"-->
-<!--                    android:text="Green Level"-->
-<!--                    android:textColor="#00623B"-->
-<!--                    android:textSize="10dp" />-->
+            <!--                <TextView-->
+            <!--                    android:id="@+id/tvLv"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="20dp"-->
+            <!--                    android:layout_below="@id/tvGMR"-->
+            <!--                    android:gravity="center_horizontal"-->
+            <!--                    android:letterSpacing="0.02"-->
+            <!--                    android:text="Green Level"-->
+            <!--                    android:textColor="#00623B"-->
+            <!--                    android:textSize="10dp" />-->
 
-<!--                <LinearLayout-->
-<!--                    android:id="@+id/lnLevel"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_below="@id/tvLv"-->
-<!--                    android:gravity="center"-->
-<!--                    android:orientation="horizontal">-->
+            <!--                <LinearLayout-->
+            <!--                    android:id="@+id/lnLevel"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_below="@id/tvLv"-->
+            <!--                    android:gravity="center"-->
+            <!--                    android:orientation="horizontal">-->
 
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:lineHeight="20dp"-->
-<!--                        android:text="35"-->
-<!--                        android:textColor="@color/colorPrimary"-->
-<!--                        android:textSize="26dp"-->
-<!--                        android:textStyle="bold" />-->
+            <!--                    <TextView-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:lineHeight="20dp"-->
+            <!--                        android:text="35"-->
+            <!--                        android:textColor="@color/colorPrimary"-->
+            <!--                        android:textSize="26dp"-->
+            <!--                        android:textStyle="bold" />-->
 
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:lineHeight="20dp"-->
-<!--                        android:text=" / "-->
-<!--                        android:textColor="@color/colorPrimary"-->
-<!--                        android:textSize="26dp"-->
-<!--                        android:textStyle="bold" />-->
+            <!--                    <TextView-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:lineHeight="20dp"-->
+            <!--                        android:text=" / "-->
+            <!--                        android:textColor="@color/colorPrimary"-->
+            <!--                        android:textSize="26dp"-->
+            <!--                        android:textStyle="bold" />-->
 
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="match_parent"-->
-<!--                        android:gravity="center"-->
-<!--                        android:lineHeight="20dp"-->
-<!--                        android:text="100"-->
-<!--                        android:textColor="@color/colorPrimary"-->
-<!--                        android:textSize="14dp"-->
-<!--                        android:textStyle="bold" />-->
-<!--                </LinearLayout>-->
+            <!--                    <TextView-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="match_parent"-->
+            <!--                        android:gravity="center"-->
+            <!--                        android:lineHeight="20dp"-->
+            <!--                        android:text="100"-->
+            <!--                        android:textColor="@color/colorPrimary"-->
+            <!--                        android:textSize="14dp"-->
+            <!--                        android:textStyle="bold" />-->
+            <!--                </LinearLayout>-->
 
-<!--                <ImageView-->
-<!--                    android:layout_width="170dp"-->
-<!--                    android:layout_height="14dp"-->
-<!--                    android:layout_below="@id/lnLevel"-->
-<!--                    android:layout_centerInParent="true"-->
-<!--                    android:layout_marginTop="20dp"-->
-<!--                    android:scaleType="centerCrop"-->
-<!--                    android:src="@drawable/img_9" />-->
+            <!--                <ImageView-->
+            <!--                    android:layout_width="170dp"-->
+            <!--                    android:layout_height="14dp"-->
+            <!--                    android:layout_below="@id/lnLevel"-->
+            <!--                    android:layout_centerInParent="true"-->
+            <!--                    android:layout_marginTop="20dp"-->
+            <!--                    android:scaleType="centerCrop"-->
+            <!--                    android:src="@drawable/img_9" />-->
 
-<!--                <TextView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_alignParentBottom="true"-->
-<!--                    android:layout_marginBottom="10dp"-->
-<!--                    android:gravity="center"-->
-<!--                    android:lineHeight="20dp"-->
-<!--                    android:text="65 Stars to Next Rewards"-->
-<!--                    android:textColor="@color/colorPrimary"-->
-<!--                    android:textSize="9dp"-->
-<!--                    android:textStyle="bold" />-->
-<!--            </RelativeLayout>-->
+            <!--                <TextView-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_alignParentBottom="true"-->
+            <!--                    android:layout_marginBottom="10dp"-->
+            <!--                    android:gravity="center"-->
+            <!--                    android:lineHeight="20dp"-->
+            <!--                    android:text="65 Stars to Next Rewards"-->
+            <!--                    android:textColor="@color/colorPrimary"-->
+            <!--                    android:textSize="9dp"-->
+            <!--                    android:textStyle="bold" />-->
+            <!--            </RelativeLayout>-->
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
