--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -1,218 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingVertical="10dp"
-    android:orientation="vertical"
+    android:scrollbars="none"
+    android:layout_height="match_parent"
     tools:context=".Fragments.ProductDetailFragment">
-
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
-
-        <TextView
-            android:id="@+id/tvPriceProductDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:lineHeight="22dp"
-            android:text="$ 100.000.000"
-            android:textColor="@color/colorPrimary"
-            android:textSize="24dp"
-            android:textStyle="bold" />
-
+        android:layout_height="match_parent">
         <RelativeLayout
-            android:layout_width="157.5dp"
-            android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/img_background_cart_quantity">
-
-            <ImageButton
-                android:id="@+id/imgMinus"
-                android:layout_width="42dp"
-                android:layout_height="46.34dp"
-                android:background="@android:color/transparent"
-                android:scaleType="center"
-                android:src="@drawable/ic_minus" />
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
 
             <TextView
-                android:id="@+id/tvQuantity"
+                android:id="@+id/tvPriceProductDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:lineHeight="13dp"
-                android:text="1"
-                android:textSize="14dp" />
+                android:layout_centerVertical="true"
+                android:lineHeight="22dp"
+                android:text="$ 100.000.000"
+                android:textColor="@color/colorPrimary"
+                android:textSize="24dp"
+                android:textStyle="bold" />
 
-            <ImageButton
-                android:id="@+id/imgPlus"
-                android:layout_width="42dp"
-                android:layout_height="46.34dp"
+            <RelativeLayout
+                android:layout_width="157.5dp"
+                android:layout_height="50dp"
                 android:layout_alignParentRight="true"
-                android:background="@android:color/transparent"
-                android:scaleType="center"
-                android:src="@drawable/ic_plus" />
+                android:background="@drawable/img_background_cart_quantity">
+
+                <ImageButton
+                    android:id="@+id/imgMinus"
+                    android:layout_width="42dp"
+                    android:layout_height="46.34dp"
+                    android:background="@android:color/transparent"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_minus" />
+
+                <TextView
+                    android:id="@+id/tvQuantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:lineHeight="13dp"
+                    android:text="1"
+                    android:textSize="14dp" />
+
+                <ImageButton
+                    android:id="@+id/imgPlus"
+                    android:layout_width="42dp"
+                    android:layout_height="46.34dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@android:color/transparent"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_plus" />
+            </RelativeLayout>
         </RelativeLayout>
-    </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:textColor="@color/colorPrimary"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal|left"
-            android:text="Top : "
-            android:textSize="17sp" />
-
-        <TextView
-            android:id="@+id/tvTop"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|right"
-            android:text="202/22 Tô Hiệu"
-            android:textSize="16sp"
-            android:textStyle="italic" />
-    </LinearLayout>
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+            <TextView
+                android:textColor="@color/colorPrimary"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|left"
+                android:text="Top : "
+                android:textSize="17sp" />
 
-        <TextView
-            android:textColor="@color/colorPrimary"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal|left"
-            android:text="Back : "
-            android:textSize="17sp" />
+            <TextView
+                android:id="@+id/tvTop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|right"
+                android:text="202/22 Tô Hiệu"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvBack"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|right"
-            android:text="202/22 Tô Hiệu"
-            android:textSize="16sp"
-            android:textStyle="italic" />
-    </LinearLayout>
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+            <TextView
+                android:textColor="@color/colorPrimary"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|left"
+                android:text="Back : "
+                android:textSize="17sp" />
 
-        <TextView
-            android:textColor="@color/colorPrimary"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal|left"
-            android:text="Neck : "
-            android:textSize="17sp" />
+            <TextView
+                android:id="@+id/tvBack"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|right"
+                android:text="202/22 Tô Hiệu"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvNeck"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|right"
-            android:text="202/22 Tô Hiệu"
-            android:textSize="16sp"
-            android:textStyle="italic" />
-    </LinearLayout>
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+            <TextView
+                android:textColor="@color/colorPrimary"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|left"
+                android:text="Neck : "
+                android:textSize="17sp" />
 
-        <TextView
-            android:textColor="@color/colorPrimary"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal|left"
-            android:text="Finger Board : "
-            android:textSize="17sp" />
+            <TextView
+                android:id="@+id/tvNeck"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|right"
+                android:text="202/22 Tô Hiệu"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvFingerBoard"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|right"
-            android:text="202/22 Tô Hiệu"
-            android:textSize="16sp"
-            android:textStyle="italic" />
-    </LinearLayout>
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+            <TextView
+                android:textColor="@color/colorPrimary"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|left"
+                android:text="Finger Board : "
+                android:textSize="17sp" />
 
-        <TextView
-            android:textColor="@color/colorPrimary"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal|left"
-            android:text="Bridge : "
-            android:textSize="17sp" />
+            <TextView
+                android:id="@+id/tvFingerBoard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|right"
+                android:text="202/22 Tô Hiệu"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvBridge"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|right"
-            android:text="202/22 Tô Hiệu"
-            android:textSize="16sp"
-            android:textStyle="italic" />
-    </LinearLayout>
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+            <TextView
+                android:textColor="@color/colorPrimary"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|left"
+                android:text="Bridge : "
+                android:textSize="17sp" />
 
-        <TextView
-            android:textColor="@color/colorPrimary"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal|left"
-            android:text="Origin  : "
-            android:textSize="17sp" />
+            <TextView
+                android:id="@+id/tvBridge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|right"
+                android:text="202/22 Tô Hiệu"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvOrigin"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|right"
-            android:text="202/22 Tô Hiệu"
-            android:textSize="16sp"
-            android:textStyle="italic" />
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:textColor="@color/colorPrimary"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|left"
+                android:text="Origin  : "
+                android:textSize="17sp" />
+
+            <TextView
+                android:id="@+id/tvOrigin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|right"
+                android:text="202/22 Tô Hiệu"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+        </LinearLayout>
+        <Button
+            android:id="@+id/btnAddToCart"
+            android:textStyle="bold"
+            android:drawableTint="@color/colorPrimary"
+            android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
+            android:textColor="@color/colorPrimary"
+            android:textAllCaps="false"
+            android:text=" Add to cart"
+            app:backgroundTint="#F0F0F3"
+            android:background="@drawable/custom_button_oval"
+            android:layout_marginTop="30dp"
+            android:layout_width="315dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            />
     </LinearLayout>
-    <Button
-        android:id="@+id/btnAddToCart"
-        android:textStyle="bold"
-        android:drawableTint="@color/colorPrimary"
-        android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
-        android:textColor="@color/colorPrimary"
-        android:textAllCaps="false"
-        android:text=" Add to cart"
-        app:backgroundTint="#F0F0F3"
-        android:background="@drawable/custom_button_oval"
-        android:layout_marginTop="30dp"
-        android:layout_width="315dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        />
-</LinearLayout>
+
+</ScrollView>
