--- a/app/src/main/res/layout/item_product_detail_image.xml
+++ b/app/src/main/res/layout/item_product_detail_image.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<de.hdodenhof.circleimageview.CircleImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:id="@+id/imgProductDetail"
-    android:src="@drawable/img_12"
-    android:scaleType="centerCrop"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:cardCornerRadius="15dp">
 
-</de.hdodenhof.circleimageview.CircleImageView>
+    <ImageView
+        android:id="@+id/imgProductDetail"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_12" />
+</androidx.cardview.widget.CardView>
