--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -63,6 +63,7 @@
     </LinearLayout>
 
     <ScrollView
+        android:id="@+id/svCart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/llTab"
@@ -217,8 +218,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:paddingStart="20dp">
-
                 <TextView
+                    android:id="@+id/tvYO"
                     android:layout_width="137dp"
                     android:layout_height="23dp"
                     android:layout_centerVertical="true"
@@ -244,17 +245,23 @@
                     android:textSize="12dp"
                     android:textStyle="bold" />
             </RelativeLayout>
-
+            <TextView
+                android:textSize="12dp"
+                android:textColor="#97D50000"
+                android:textStyle="italic"
+                android:layout_marginHorizontal="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="* Swipe to left to delete item"
+                />
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvCartFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="5dp"
                 android:background="@drawable/custom_rcv_border"
                 android:paddingHorizontal="5dp"
                 android:paddingVertical="10dp" />
-
             <TextView
                 android:layout_width="137dp"
                 android:layout_height="23dp"
@@ -427,6 +434,7 @@
                     android:textSize="12dp" />
 
                 <TextView
+                    android:id="@+id/tvCartPrice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/cvCardPayment"
@@ -456,7 +464,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/cvCardPayment"
                     android:gravity="right"
-                    android:text="$ 2.0"
+                    android:text="$ 40.000"
                     android:textColor="#D9D07E"
                     android:textSize="12dp"
                     android:textStyle="bold" />
@@ -478,6 +486,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tvCartTotalPrice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/cvCardPayment"
