--- a/app/src/main/res/layout/item_cart_layout.xml
+++ b/app/src/main/res/layout/item_cart_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_marginVertical="5dp"
+    android:id="@+id/itemCartLayout"
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <LinearLayout
@@ -24,47 +25,62 @@
                 />
         </androidx.cardview.widget.CardView>
         <RelativeLayout
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
+                android:gravity="center_vertical"
                 android:id="@+id/tvCartItemName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:text="Guitar Acoutics"
                 android:lines="1"
+                android:layout_toStartOf="@id/tvCartItemQuantity"
                 android:textColor="@color/colorPrimary"
-                android:textSize="20dp"
+                android:textSize="17dp"
                 android:textStyle="bold" />
-
             <TextView
-                android:id="@+id/tvCartItemPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tvCartItemName"
-                android:text="12.000.000 "
-                android:textColor="@color/textColor"
-                android:textSize="16dp" />
-            <TextView
-                android:layout_toEndOf="@id/tvCartItemPrice"
+                android:gravity="center"
+                android:layout_alignParentRight="true"
                 android:id="@+id/tvCartItemQuantity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tvCartItemName"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:text="x 2"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16dp" />
+            <TextView
+                android:gravity="center_vertical"
+                android:id="@+id/tvCartItemPriceDiscount"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_below="@id/tvCartItemName"
+                android:text="Price : 12.000.000 "
+                android:textColor="@color/textColor"
+                android:textSize="16dp" />
+
+            <TextView
+                android:id="@+id/tvCartItemPrice"
+                android:gravity="center_vertical"
+                android:layout_marginStart="5dp"
+                android:layout_toRightOf="@id/tvCartItemPriceDiscount"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_below="@id/tvCartItemName"
+                android:text="12.000.000 "
+                android:textColor="#A6D50000"
+                android:textSize="18dp" />
+
             <TextView
                 android:id="@+id/tvCartItemTotalPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvCartItemPrice"
-                android:text="$ 24.000.000"
-                android:textStyle="bold"
+                android:text="Total :  24.000.000"
                 android:textColor="@color/black"
-                android:textSize="16dp" />
+                android:textSize="16dp"
+                android:textStyle="bold" />
         </RelativeLayout>
     </LinearLayout>
 
