--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -4,55 +4,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.StoreFragment">
+
     <RelativeLayout
         android:id="@+id/rltSearchStore"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/white"
-        >
+        android:background="@color/white">
+
         <ImageView
             android:id="@+id/imgLogoStore"
-            android:scaleType="centerCrop"
-            android:layout_alignParentLeft="true"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_logo_green"
-            />
+            android:layout_alignParentLeft="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_logo_green" />
+
         <EditText
-            android:textCursorDrawable="@color/colorPrimary"
-            android:backgroundTint="@color/colorPrimary"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_toRightOf="@id/imgLogoStore"
-            android:layout_toLeftOf="@id/imgFindStore"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/imgFindStore"
+            android:layout_toRightOf="@id/imgLogoStore"
+            android:backgroundTint="@color/colorPrimary"
             android:hint="Find a store"
-            />
+            android:textColor="@color/black"
+            android:textCursorDrawable="@color/colorPrimary"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
         <ImageView
-            android:layout_centerVertical="true"
             android:id="@+id/imgFindStore"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:tint="@color/colorPrimary"
+            android:layout_centerVertical="true"
             android:src="@drawable/ic_baseline_search_24"
+            android:tint="@color/colorPrimary"
             tools:ignore="UseAppTint" />
     </RelativeLayout>
+
     <fragment
-        android:layout_below="@id/rltSearchStore"
-        android:layout_above="@id/rcvStore"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/mvStore"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_above="@id/rcvStore"
+        android:layout_below="@id/rltSearchStore" />
+
+
+
     <androidx.recyclerview.widget.RecyclerView
-        android:padding="10dp"
         android:id="@+id/rcvStore"
         android:layout_width="match_parent"
         android:layout_height="350dp"
-        android:background="@color/white"
         android:layout_alignParentBottom="true"
-        />
+        android:background="@color/white"
+        android:padding="10dp" />
 </RelativeLayout>
